<resources>
    <string name="app_name">Body Fat Calculator</string>
    <string name="how"><u>Know about calculation method</u></string>
    <string name="height">Height</string>
    <string name="Weight">Weight</string>
    <string name="Waist">Waist</string>
    <string name="Neck">Neck</string>
    <string name="Hip">Hip</string>
    <string name="Gender">Gender</string>
    <string name="body">Body Measurement</string>
    <string name="Calculate">Calculate</string>
    <string name="about"><b>U.S. Navy Method:</b>\nThere are many specific techniques used for measuring body fat. The calculator above uses a method involving equations developed at the Naval Health Research Center by Hodgdon and Beckett in 1984.\n\n
<b>Body fat percentage (BFP) formula for males:</b>\n


SI, Metric Units:\n
BFP =
495/(1.0324 - 0.19077×log10(waist-neck) + 0.15456×log10(height))
        - 450\n\n<b>Body fat percentage (BFP) formula for females:</b>\n

SI, Metric Units:\n
BFP =
495/(1.29579 - 0.35004×log10(waist+hip-neck) + 0.22100×log10(height))
- 450

    </string>
<string name="your">Your Body Fat Percentage is:</string>
    <string name="lean">LEAN</string>
    <string name="title">BODY FAT % CHART</string>
    <string name="m">MEN</string>
    <string name="f">WOMEN</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="in">in</string>
    <string name="ft">ft</string>
    <string name="kg">kg</string>
    <string name="lbs">lbs</string>
    <string name="cm">cm</string>
    <string name="toast">Please enter your height, weight,waist, neck and hip measurements.</string>
    <string name="l1">LOW BODY FAT RISK</string>
    <string name="l2">ULTRA LEAN</string>
    <string name="l3">LEAN</string>
    <string name="l4">MODERATELY FAT</string>
    <string name="l5">EXCESS FAT</string>
    <string name="l6">HIGH BODY FAT RISK</string>
    <string name="m1">&lt;5%</string>
    <string name="m2">&lt;8%</string>
    <string name="m3">&lt;12%</string>
    <string name="m4">&lt;20%</string>
    <string name="m5">&lt;30%</string>
    <string name="f1">&lt;15%</string>
    <string name="f2">&lt;18%</string>
    <string name="f3">&lt;22%</string>
    <string name="f4">&lt;30%</string>
    <string name="f5">&lt;40%</string>
    <string name="d1">Ask your healthcare provider about how to safely increase your body fat.</string>
    <string name="d2">This is the body fat level that is often found in most elite athletes.</string>
    <string name="d3">This body fat level is lower than most people and excellent for health.</string>
    <string name="d4">This body fat level is generally acceptable for good health.</string>
    <string name="d5">This body fat level indicates an excess accumulation of fat.</string>
    <string name="d6">Ask your healthcare provider about how to safely decrease your body fat.</string>
    <string name="app_name_ind">Kalkulator Lemak Tubuh</string>
    <string name="how_ind"><u>Mengetahui tentang metode penghitungan</u></string>
    <string name="height_ind">Tinggi</string>
    <string name="Weight_ind">Berat</string>
    <string name="Waist_ind">Pinggang</string>
    <string name="Neck_ind">Leher</string>
    <string name="Hip_ind">Pinggul</string>
    <string name="Gender_ind">Jenis Kelamin</string>
    <string name="body_ind">Pengukuran tubuh</string>
    <string name="Calculate_ind">Hitung</string>
    <string name="about_ind"><b>AS. Metode Angkatan Laut:</b>\nAda banyak teknik khusus yang digunakan untuk mengukur lemak tubuh. Kalkulator di atas menggunakan metode yang melibatkan persamaan yang dikembangkan di Pusat Penelitian Kesehatan Angkatan Laut oleh Hodgdon dan Beckett pada tahun 1984.\n\n
<b>Rumus persentase lemak tubuh (BFP) untuk pria:</b>\n


SI, Satuan Metrik:\n
BFP =
495/(1,0324 - 0,19077×log10(pinggang-leher) + 0,15456×log10(tinggi))
        - 450\n\n<b>Formula persentase lemak tubuh (BFP) untuk wanita:</b>\n

SI, Satuan Metrik:\n
BFP =
495/(1,29579 - 0,35004×log10(pinggang+pinggul-leher) + 0,22100×log10(tinggi))
- 450

    </string>
    <string name="your_ind">Persentase Lemak Tubuh Anda adalah:</string>
    <string name="lean_ind">LEAN</string>
    <string name="title_ind">BAGAN % LEMAK TUBUH</string>
    <string name="m_ind">PRIA</string>
    <string name="f_ind">WANITA</string>
    <string name="male_ind">Pria</string>
    <string name="female_ind">Wanita</string>
    <string name="toast_ind">Silakan masukkan ukuran tinggi badan, berat badan, pinggang, leher, dan pinggul Anda.</string>
    <string name="l1_ind">RISIKO LEMAK TUBUH RENDAH</string>
    <string name="l2_ind">ULTRA LEAN</string>
    <string name="l3_ind">LEAN</string>
    <string name="l4_ind">SEDANG GEMUK</string>
    <string name="l5_ind">KELEBIHAN LEMAK</string>
    <string name="l6_ind">RISIKO LEMAK TUBUH TINGGI</string>
    <string name="d1_ind">Tanyakan kepada penyedia layanan kesehatan Anda tentang cara meningkatkan lemak tubuh dengan aman.</string>
    <string name="d2_ind">Inilah tingkat lemak tubuh yang sering ditemukan pada sebagian besar atlet elit.</string>
    <string name="d3_ind">Tingkat lemak tubuh ini lebih rendah dibandingkan kebanyakan orang dan sangat baik untuk kesehatan.</string>
    <string name="d4_ind">Tingkat lemak tubuh ini secara umum dapat diterima untuk kesehatan yang baik.</string>
    <string name="d5_ind">Tingkat lemak tubuh ini menunjukkan adanya penumpukan lemak berlebih.</string>
    <string name="d6_ind">Tanyakan kepada penyedia layanan kesehatan Anda tentang cara mengurangi lemak tubuh dengan aman.</string>
    <string name="app_name_sp">Calculadora de grasa corporal</string>
    <string name="how_sp"><u>Conozca el método de cálculo</u></string>
    <string name="height_sp">Altura</string>
    <string name="Weight_sp">Peso</string>
    <string name="Waist_sp">Cintura</string>
    <string name="Neck_sp">Cuello</string>
    <string name="Hip_sp">Cadera</string>
    <string name="Gender_sp">Género</string>
    <string name="body_sp">Medición corporal</string>
    <string name="Calculate_sp">Calcular</string>
    <string name="about_sp"><b>EE.UU. Método azul marino:</b>\nExisten muchas técnicas específicas que se utilizan para medir la grasa corporal. La calculadora anterior utiliza un método que involucra ecuaciones desarrolladas en el Centro de Investigación de Salud Naval por Hodgdon y Beckett en 1984.\n\n
        <b>Fórmula de porcentaje de grasa corporal (BFP) para hombres:</b>\n


        SI, unidades métricas:\n
        BFP =
        495/(1.0324 - 0.19077×log10(cintura-cuello) + 0.15456×log10(altura))
        - 450\n\n<b>Fórmula de porcentaje de grasa corporal (BFP) para mujeres:</b>\n

        SI, unidades métricas:\n
        BFP =
        495/(1,29579 - 0,35004×log10(cintura+cadera-cuello) + 0,22100×log10(altura))
        - 450

    </string>
    <string name="your_sp">Tu porcentaje de grasa corporal es:</string>
    <string name="lean_sp">LEAN</string>
    <string name="title_sp">GRÁFICO DE % DE GRASA CORPORAL</string>
    <string name="m_sp">HOMBRE</string>
    <string name="f_sp">MUJERES</string>
    <string name="male_sp">Hombre</string>
    <string name="female_sp">Mujer</string>
    <string name="toast_sp">Ingrese sus medidas de altura, peso, cintura, cuello y cadera.</string>
    <string name="l1_sp">RIESGO DE BAJO GRASA CORPORAL</string>
    <string name="l2_sp">ULTRA LEAN</string>
    <string name="l3_sp">LEANO</string>
    <string name="l4_sp">MODERADAMENTE GORDO</string>
    <string name="l5_sp">EXCESO DE GRASA</string>
    <string name="l6_sp">RIESGO ALTO DE GRASA CORPORAL</string>
    <string name="d1_sp">Pregúntele a su proveedor de atención médica cómo aumentar su grasa corporal de manera segura.</string>
    <string name="d2_sp">Este es el nivel de grasa corporal que suele encontrarse en la mayoría de los atletas de élite.</string>
    <string name="d3_sp">Este nivel de grasa corporal es más bajo que el de la mayoría de las personas y excelente para la salud.</string>
    <string name="d4_sp">Este nivel de grasa corporal es generalmente aceptable para una buena salud.</string>
    <string name="d5_sp">Este nivel de grasa corporal indica una acumulación excesiva de grasa.</string>
    <string name="d6_sp">Pregúntele a su proveedor de atención médica cómo reducir su grasa corporal de manera segura.</string>
    <string name="app_name_it">Calcolatore del grasso corporeo</string>
    <string name="how_it"><u>Conosci il metodo di calcolo</u></string>
    <string name="height_it">Altezza</string>
    <string name="Weight_it">Peso</string>
    <string name="Waist_it">Vita</string>
    <string name="Neck_it">Collo</string>
    <string name="Hip_it">Anca</string>
    <string name="Gender_it">Sesso</string>
    <string name="body_it">Misurazione del corpo</string>
    <string name="Calculate_it">Calcola</string>
    <string name="about_it"><b>Stati Uniti Metodo della Marina:</b>\nEsistono molte tecniche specifiche utilizzate per misurare il grasso corporeo. Il calcolatore qui sopra utilizza un metodo che coinvolge equazioni sviluppato presso il Naval Health Research Center da Hodgdon e Beckett nel 1984.\n\n
<b>Formula della percentuale di grasso corporeo (BFP) per i maschi:</b>\n


SI, unità metriche:\n
BFP =
495/(1.0324 - 0.19077×log10(vita-collo) + 0.15456×log10(altezza))
        - 450\n\n<b>Formula della percentuale di grasso corporeo (BFP) per le donne:</b>\n

SI, unità metriche:\n
BFP =
495/(1.29579 - 0.35004×log10(vita+collo) + 0.22100×log10(altezza))
- 450

    </string>
    <string name="your_it">La tua percentuale di grasso corporeo è:</string>
    <string name="lean_it">LEAN</string>
    <string name="title_it">GRAFICO % GRASSO CORPOREO</string>
    <string name="m_it">UOMINI</string>
    <string name="f_it">DONNE</string>
    <string name="male_it">Maschio</string>
    <string name="female_it">Femmina</string>
    <string name="toast_it">Inserisci le tue misure di altezza, peso, vita, collo e fianchi.</string>
    <string name="l1_it">BASSO RISCHIO DI GRASSO CORPOREO</string>
    <string name="l2_it">ULTRA SOTTILE</string>
    <string name="l3_it">LEAN</string>
    <string name="l4_it">MODERATAMENTE GRASSO</string>
    <string name="l5_it">GRASSO IN ECCESSO</string>
    <string name="l6_it">ALTO RISCHIO GRASSO CORPOREO</string>
    <string name="d1_it">Chiedi al tuo medico come aumentare in modo sicuro il grasso corporeo.</string>
    <string name="d2_it">Questo è il livello di grasso corporeo che si riscontra spesso nella maggior parte degli atleti d\'élite.</string>
    <string name="d3_it">Questo livello di grasso corporeo è inferiore a quello della maggior parte delle persone ed è eccellente per la salute.</string>
    <string name="d4_it">Questo livello di grasso corporeo è generalmente accettabile per una buona salute.</string>
    <string name="d5_it">Questo livello di grasso corporeo indica un accumulo eccessivo di grasso.</string>
    <string name="d6_it">Chiedi al tuo medico come ridurre in sicurezza il grasso corporeo.</string>
    <string name="app_name_fr">Calculateur de graisse corporelle</string>
    <string name="how_fr"><u>Connaître la méthode de calcul</u></string>
    <string name="height_fr">Hauteur</string>
    <string name="Weight_fr">Poids</string>
    <string name="Waist_fr">Taille</string>
    <string name="Neck_fr">Cou</string>
    <string name="Hip_fr">Hip</string>
    <string name="Gender_fr">Genre</string>
    <string name="body_fr">Mesure du corps</string>
    <string name="Calculate_fr">Calculer</string>
</resources>